// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageTemplate fullHeight is rendered with noscroll 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate fullHeight is rendered with true 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPage euiPage--grow euiPageTemplate testClass1 testClass2"
  data-test-subj="test subject string"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate restrict width can be set to a custom number 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-custom"
        style="max-width:1024px"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate restrict width can be turned off 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="euiPageContentBody euiPage--restrictWidth-default testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        aria-label="aria-label"
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter testClass1 testClass2"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader euiPageHeader--bottomBorder euiPageHeader--responsive euiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    />
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody minHeight is rendered 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody paddingSize is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody style is rendered 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody euiPageBody--borderRadiusNone testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="euiPageContentBody euiPage--restrictWidth-default testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        aria-label="aria-label"
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter testClass1 testClass2"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader euiPageHeader--paddingLarge euiPageHeader--responsive euiPage--restrictWidth-default euiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    />
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent minHeight is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent paddingSize is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent style is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody euiPageBody--borderRadiusNone testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default testClass1 testClass2"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone testClass1 testClass2"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader euiPageHeader--paddingLarge euiPageHeader--responsive euiPage--restrictWidth-default euiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    />
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default minHeight is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default paddingSize is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default style is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
    >
      <div
        class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
    >
      <div
        class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="euiPageContentBody testClass1 testClass2"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone testClass1 testClass2"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader euiPageHeader--bottomBorder euiPageHeader--responsive euiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    />
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty minHeight is rendered 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty paddingSize is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty style is rendered 1`] = `
<div
  class="euiPage euiPage--paddingLarge euiPage--grow euiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate with bottomBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--sticky"
      style="left:0;right:0;bottom:0"
    >
      <h2
        class="euiScreenReaderOnly"
      >
        Page level controls
      </h2>
      <div
        class="euiPageContentBody euiPage--restrictWidth-default"
      >
        Bottom Bar
      </div>
    </section>
    <p
      aria-live="assertive"
      class="euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</div>
`;
